--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -2,12 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/imgCollab"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/alip_danis"
+        android:contentDescription="Foto Collab"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop" />
 
     <TextView
-        android:text="Collab Fragment"
-        android:textSize="24sp"
+        android:text="Biodata Anggota Collab"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvBiodata"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
